# WikiDeepSeek

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AI_MODEL.py  Ai.py  Dockerfile  README.md  ai_model.py  ai_summaryzer.py  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  wiki_httpx.py  wiki_parser.py
alembic/: env.py
app/: aerich.ini  main.py  models.py  schemas.py  tasks.py
app/configs/: dramatic_config.py  logger_config.py  redis_config.py  tortoies_config.py  tortoise_config.py
app/core/: redis.py
app/db/: models.py  pydentic_models.py
app/migrations/models/: 1_20250607122015_None.py
app/repository/: cache_repository.py
app/services/: ai_model.py  cashe_service.py  wiki_httpx.py  wiki_parser.py
migrations/models/: 1_20250607142534_update.py  2_20250607142918_update.py
