[project]
name = "wikideepseek"
version = "1.0.0"
description = "Pasers fow Wikipedia with API created by FastAPI"
authors = [
    {name = "Sweet_Sempai",email = "chcolatemilk00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "openai (>=1.84.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "bandit (>=1.8.3,<2.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.4.0,<6.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
